wip: maui app auth

--- a/src/dotnet/Host/Pages/_Host.cshtml
+++ b/src/dotnet/Host/Pages/_Host.cshtml
@@ -6,6 +6,8 @@
 @using Stl.Fusion.Blazor
 @using Stl.Fusion.Server.Authentication
 @using Stl.Fusion.Server.Controllers
+@using System.Text.Json
+@using System.Text
 @inject IServiceProvider _services
 @inject ServerAuthHelper _serverAuthHelper
 @inject HostSettings _hostSettings
@@ -76,14 +78,25 @@
 </div>
 
 @if (isCloseWindowRequest) {
-    <script>
-        setTimeout(function () {
-            window.close();
-        }, 500)
-    </script>
-    <div class="alert alert-primary">
-        @(closeWindowFlowName) completed, you can close this window.
-    </div>
+	@if (StringComparer.Ordinal.Equals(HttpContext.Request.Path.Value, "/fusion/close-app")) {
+		var cookies = HttpContext.Request.Cookies.Where(x => x.Key != "_ssb_").Append(KeyValuePair.Create("_ssb_", "0")).ToArray();
+		var secret= Convert.ToBase64String(Encoding.UTF8.GetBytes(JsonSerializer.Serialize(cookies)));
+		var appUrl = $"http://127.0.0.1:57348/?secret={secret}";
+
+		<script>
+			window.location = '@appUrl';
+		</script>
+	}
+		else {
+			<script>
+				setTimeout(function () {
+					window.close();
+				}, 500)
+			</script>
+		}
+		<div class="alert alert-primary">
+			@(closeWindowFlowName) completed, you can close this window.
+		</div>
 } else {
     <app id="app" class="flex flex-col h-full" >
         @(await Html.RenderApp(_services, HttpContext))
