--- a/src/dotnet/ClientApp/Main.razor
+++ b/src/dotnet/ClientApp/Main.razor
@@ -37,9 +37,11 @@
 		if (!_circuitContext.IsPrerendering)
 			_circuitContext.RootComponent = this;
 		await base.OnInitializedAsync().ConfigureAwait(true);
+		// TODO: make it better
 		if (string.IsNullOrWhiteSpace(SessionId)) {
-			// TODO: make it better
 			SessionId = Session.Default.Id.Value;
+		}
+		if (SessionId == Session.Default.Id.Value){
 			string path = Path.Combine(FileSystem.AppDataDirectory, "session.txt");
 			if (File.Exists(path)){
 				SessionId = await File.ReadAllTextAsync(path, CancellationToken.None).ConfigureAwait(true);
