--- a/src/dotnet/ClientApp/MainPage.xaml
+++ b/src/dotnet/ClientApp/MainPage.xaml
@@ -6,7 +6,7 @@
              x:Class="ActualChat.ClientApp.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-    <b:BlazorWebView HostPage="wwwroot/index.html" ExternalNavigationStarting="BlazorWebView_ExternalNavigationStarting" >
+    <b:BlazorWebView HostPage="wwwroot/index.html">
         <b:BlazorWebView.RootComponents>
             <b:RootComponent Selector="#app" ComponentType="{x:Type local:Main}" />
         </b:BlazorWebView.RootComponents>
