--- a/src/nodejs/styles/colors.css
+++ b/src/nodejs/styles/colors.css
@@ -21,8 +21,8 @@
     --text-color-rating: #fde047;
     --text-inline-code: #D83E52;
 
-    --button-color-success: #25b7f7;
-    --button-color-success-hover: #5ecaf9;
+    --button-color-success: #09a7ec;
+    --button-color-success-hover: #0899d9;
     --button-color-accent: #ffffff;
     --button-color-accent-hover: #FAFAFA;
     --error-toast-header: #feb7b7;
