--- a/src/nodejs/styles/utils.css
+++ b/src/nodejs/styles/utils.css
@@ -71,3 +71,20 @@ button.off {
     box-shadow: 0 2px 2px rgba(0,0,0,.25);
 }
 
+
+.btn {
+    @apply leading-5 transition duration-150 ease-in-out outline-none;
+    @apply inline-flex py-2 px-3 text-sm font-medium fill-current rounded-md border;
+}
+
+.btn.btn-success {
+    @apply bg-button-success border-success text-accent-muted;
+    @apply hover:bg-button-success-hover hover:border-success-muted;
+    @apply active:bg-button-success-hover;
+}
+
+.btn.btn-cancel {
+    @apply bg-primary border-primary text-primary;
+    @apply hover:bg-accent hover:border-accent;
+    @apply active:bg-accent;
+}
