--- a/src/dotnet/UI.Blazor/Components/UserInteractionRequestModal.razor
+++ b/src/dotnet/UI.Blazor/Components/UserInteractionRequestModal.razor
@@ -3,9 +3,7 @@
         <p>Starting @Operation.</p>
     </div>
     <div class="p-4 pt-1 flex justify-center">
-        <button type="button" class="signin-button inline-flex" @onclick="OnContinueClick">
-            Continue
-        </button>
+        <Button Class="btn btn-success" Title="Continue" OnClick="OnContinueClick"></Button>
     </div>
 </div>
 
