wip: update styles, replace some buttons with Button component

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatLanguageToggle.razor
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatLanguageToggle.razor
@@ -6,12 +6,14 @@
 @{
     var language = State.LatestNonErrorValue.LanguageOrDefault();
 }
-<button class="chat-language-toggle rounded-xl text-md font-semibold text-secondary -mr-2.5 z-10"
-        @onclick="OnClick">
-    <span class="w-9 h-9 m-3.5">
-        @language.Shortcut
-    </span>
-</button>
+<Button Class="chat-language-toggle rounded-xl text-md font-semibold text-secondary -mr-2.5 z-10"
+        OnClick="OnClick">
+    <ChildContent>
+        <span class="w-9 h-9 m-3.5">
+            @language.Shortcut
+        </span>
+    </ChildContent>
+</Button>
 
 @code {
     [CascadingParameter] public Chat Chat { get; set; } = null!;
