--- a/src/dotnet/UI.Blazor/Components/Button/Button.razor
+++ b/src/dotnet/UI.Blazor/Components/Button/Button.razor
@@ -3,14 +3,14 @@
 
 <button type="button" @onclick="OnClick"
         class="@Class" title="@Title">
-    <span>@InnerText</span>
+    <span>@Caption</span>
     @ChildContent
 </button>
 
 @code {
     [Parameter] public string Class { get; set; } = "btn btn-success";
-    [Parameter] public string InnerText { get; set; } = "";
-    [Parameter] public EventCallback OnClick { get; set; }
+    [Parameter] public string Caption { get; set; } = "";
+    [Parameter] public EventCallback<MouseEventArgs> OnClick { get; set; }
     [Parameter] public RenderFragment? ChildContent { get; set; }
     [Parameter] public string? Title { get; set; } = "";
 
