--- a/src/dotnet/Chat.UI.Blazor/Components/ChatLanguageToggle.razor
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatLanguageToggle.razor
@@ -6,14 +6,14 @@
 @{
     var language = State.LatestNonErrorValue.LanguageOrDefault();
 }
-<Button Class="chat-language-toggle rounded-xl text-md font-semibold text-secondary -mr-2.5 z-10"
+<ButtonInline Class="chat-language-toggle rounded-xl text-md font-semibold text-secondary -mr-2.5 z-10"
         OnClick="OnClick">
     <ChildContent>
         <span class="w-9 h-9 m-3.5">
             @language.Shortcut
         </span>
     </ChildContent>
-</Button>
+</ButtonInline>
 
 @code {
     [CascadingParameter] public Chat Chat { get; set; } = null!;
