--- a/src/dotnet/Chat.UI.Blazor/Pages/EditChatPage.razor
+++ b/src/dotnet/Chat.UI.Blazor/Pages/EditChatPage.razor
@@ -10,7 +10,7 @@
         <div>
             <label for="Title" class="block text-sm font-medium text-secondary">Chat title</label>
             <div class="mt-1">
-                <InputText @bind-Value="@_model.Title" id="Title"
+                <TextBox @bind-Value="@_model.Title" id="Title" Autofocus="true"
                            class="w-full px-2 py-1 border border-1 border-gray-300 rounded-md focus:outline-none focus:border-sky-500"/>
             </div>
         </div>
