--- a/src/dotnet/UI.Blazor/Components/FeatureRequestModal.razor
+++ b/src/dotnet/UI.Blazor/Components/FeatureRequestModal.razor
@@ -36,7 +36,7 @@
         <textarea class="feedback-textarea border border-accent w-full" rows="5" @bind="_comment" @bind:event="oninput"></textarea>
     </div>
     <div class="mt-4">
-        <Button Class="btn btn-success" OnClick="OnSubmit" Caption="Send feedback" ></Button>
+        <Button Class="btn btn-success" OnClick="OnSubmit">Send feedback</Button>
     </div>
 </div>
 
