--- a/src/dotnet/UI.Blazor/Components/UserInteractionRequestModal.razor
+++ b/src/dotnet/UI.Blazor/Components/UserInteractionRequestModal.razor
@@ -3,7 +3,7 @@
         <p>Starting @Operation.</p>
     </div>
     <div class="p-4 pt-1 flex justify-center">
-        <Button Class="btn btn-success" Title="Continue" OnClick="OnContinueClick"></Button>
+        <Button Class="btn btn-success" OnClick="OnContinueClick">Continue</Button>
     </div>
 </div>
 
