--- a/src/dotnet/Chat.UI.Blazor/Pages/NewChatPage.razor
+++ b/src/dotnet/Chat.UI.Blazor/Pages/NewChatPage.razor
@@ -9,8 +9,8 @@
     <div>
         <label for="Title" class="block text-sm font-medium text-secondary">Chat title</label>
         <div class="mt-1">
-            <InputText @bind-Value="@_model.Title" id="Title" tabIndex="1" autofocus
-                       class="w-full px-2 py-1 border border-1 border-gray-300 rounded-md focus:outline-none focus:border-sky-500"/>
+            <TextBox @bind-Value="@_model.Title" id="Title" tabIndex="1" Autofocus="true"
+                       class="w-full px-2 py-1 border border-1 border-gray-300 rounded-md focus:outline-none focus:border-success"/>
         </div>
     </div>
 
