--- a/src/dotnet/UI.Blazor/Components/Button/MenuItemButton.razor
+++ b/src/dotnet/UI.Blazor/Components/Button/MenuItemButton.razor
@@ -1,9 +1,8 @@
-@using System.Text
 @namespace ActualChat.UI.Blazor.Components
 
-<button @onclick="OnClick" class="btn btn-inline @Class" title="@Title" disabled="@Disabled"
-        name="@Name" type="@GetButtonType">
-        @ChildContent
+<button @onclick="OnClick" class="btn menu-item-btn menu-item @Class" title="@Title" disabled="@Disabled"
+        tooltip="@Tooltip" flow="@Flow" name="@Name" type="@GetButtonType">
+    @ChildContent
 </button>
 
 @code {
@@ -12,6 +11,8 @@
     [Parameter] public RenderFragment? ChildContent { get; set; }
     [Parameter] public string? Title { get; set; } = "";
     [Parameter] public bool Disabled { get; set; }
+    [Parameter] public string Tooltip { get; set; } = "";
+    [Parameter] public string Flow { get; set; } = "";
     [Parameter] public string Name { get; set; } = "";
     [Parameter] public ButtonType Type { get; set; } = ButtonType.Button;
 
