--- a/src/dotnet/UI.Blazor/Components/Button/ButtonSquare.razor
+++ b/src/dotnet/UI.Blazor/Components/Button/ButtonSquare.razor
@@ -1,7 +1,7 @@
 @using System.Text
 @namespace ActualChat.UI.Blazor.Components
 
-<button @onclick="OnClick" class="btn btn-inline @Class" title="@Title" disabled="@Disabled"
+<button @onclick="OnClick" class="btn btn-square @Class" title="@Title" disabled="@Disabled"
         name="@Name" type="@GetButtonType">
         @ChildContent
 </button>
