--- a/src/nodejs/styles/utils.css
+++ b/src/nodejs/styles/utils.css
@@ -44,11 +44,11 @@
 /* Suffixes */
 
 button.on,
-.btn.btn-inline.on {
+.btn.btn-square.on {
     @apply text-toggle-on;
 }
 button.off,
-.btn.btn-inline.off {
+.btn.btn-square.off {
     @apply text-secondary;
 }
 
@@ -112,7 +112,7 @@ button.off,
     @apply h-10 min-w-20 text-base;
 }
 
-.btn.btn-inline {
+.btn.btn-square {
     @apply text-base font-semibold text-secondary bg-accent hover:bg-primary h-full inline-block;
     @apply p-1 mx-0 min-w-0 border-0;
 }
